--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,7 @@ EMAIL_USER=truongdacdien0805@gmail.com
 EMAIL_PASS=icrb evxx beiz dkhs
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
+JWT_AT_SECRET=AT_secret
+JWT_RT_SECRET=RT_secret
+JWT_AT_EXPIRESIN=15m
+JWT_RT_EXPIRESIN=200h
