--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,11 @@ JWT_AT_SECRET=AT_secret
 JWT_RT_SECRET=RT_secret
 JWT_AT_EXPIRESIN=15m
 JWT_RT_EXPIRESIN=200h
+
+
+MOMO_PARTNER_CODE=your_partner_code
+MOMO_ACCESS_KEY=your_access_key
+MOMO_SECRET_KEY=your_secret_key
+MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
+MOMO_RETURN_URL=https://<subdomain>.ngrok.io/checkout/success
+MOMO_NOTIFY_URL=https://<subdomain>.ngrok.io/checkout/notify
