commit before phong

--- a/backend/.env
+++ b/backend/.env
@@ -10,9 +10,9 @@ JWT_AT_EXPIRESIN=15m
 JWT_RT_EXPIRESIN=200h
 
 
-MOMO_PARTNER_CODE=your_partner_code
-MOMO_ACCESS_KEY=your_access_key
-MOMO_SECRET_KEY=your_secret_key
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
-MOMO_RETURN_URL=https://<subdomain>.ngrok.io/checkout/success
-MOMO_NOTIFY_URL=https://<subdomain>.ngrok.io/checkout/notify
+MOMO_REDIRECT_URL=http://localhost:5000/views/home.html
+MOMO_NOTIFY_URL=https://27c9-42-118-236-152.ngrok-free.app/api/payment/callback
