--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
-    "twilio": "^5.3.6"
+    "twilio": "^5.3.6",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
