--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,7 @@ MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
 MOMO_REDIRECT_URL=http://localhost:5000/views/home.html
 MOMO_NOTIFY_URL=https://27c9-42-118-236-152.ngrok-free.app/api/payment/callback
+
+CLOUDINARY_CLOUD_NAME = ddrfocetn
+CLOUDINARY_API_KEY = 244381428715569
+CLOUDINARY_API_SECRET = XEVt2axaiq35ZSq_S6cUmN21F5E
