--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "twilio": "^5.3.6",
     "validator": "^13.12.0"
