--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.7.9",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "recharts": "^2.15.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
