--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 JWT_AT_SECRET=AT_secret
 JWT_RT_SECRET=RT_secret
-JWT_AT_EXPIRESIN=15m
+JWT_AT_EXPIRESIN=200h
 JWT_RT_EXPIRESIN=200h
 
 
