--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
