--- a/backend/.env
+++ b/backend/.env
@@ -15,7 +15,7 @@ MOMO_ACCESS_KEY=F8BBA842ECF85
 MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
 MOMO_REDIRECT_URL=http://localhost:5174/order-success
-MOMO_NOTIFY_URL=https://a9f0-42-118-191-183.ngrok-free.app/api/payment/callback
+MOMO_NOTIFY_URL=https://a602-115-78-13-71.ngrok-free.app/api/payment/callback
 
 CLOUDINARY_CLOUD_NAME = ddrfocetn
 CLOUDINARY_API_KEY = 244381428715569
