--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "lucide": "^0.469.0",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
