--- a/backend/.env
+++ b/backend/.env
@@ -8,17 +8,6 @@ JWT_AT_SECRET=AT_secret
 JWT_RT_SECRET=RT_secret
 JWT_AT_EXPIRESIN=200h
 JWT_RT_EXPIRESIN=200h
-<<<<<<< Updated upstream
-=======
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 
 
 MOMO_PARTNER_CODE=MOMO
@@ -26,30 +15,9 @@ MOMO_ACCESS_KEY=F8BBA842ECF85
 MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
 MOMO_REDIRECT_URL=http://localhost:5174/order-success
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-MOMO_NOTIFY_URL=https://a602-115-78-13-71.ngrok-free.app/api/payment/callback
-=======
-MOMO_NOTIFY_URL= https://6730-115-78-13-71.ngrok-free.app/api/payment/callback
->>>>>>> Stashed changes
-=======
-MOMO_NOTIFY_URL= https://6730-115-78-13-71.ngrok-free.app/api/payment/callback
->>>>>>> Stashed changes
-=======
-MOMO_NOTIFY_URL= https://6730-115-78-13-71.ngrok-free.app/api/payment/callback
->>>>>>> Stashed changes
+MOMO_NOTIFY_URL=https://61e2-42-119-101-2.ngrok-free.app/api/payment/callback
+
 
 CLOUDINARY_CLOUD_NAME = ddrfocetn
 CLOUDINARY_API_KEY = 244381428715569
 CLOUDINARY_API_SECRET = XEVt2axaiq35ZSq_S6cUmN21F5E
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
->>>>>>> Stashed changes
